--- a/pr-12/static/css/style.css
+++ b/pr-12/static/css/style.css
@@ -222,6 +222,7 @@ button:active,
   gap: 14px;
   margin-top: 10px;
   width: 100%;
+  justify-content: start;
 }
 
 /* app card */
@@ -266,7 +267,7 @@ button:active,
   font-weight: 700;
   font-size: 14px;
   text-align: center;
-  margin-bottom: 6px;
+  margin-bottom: 10px;
 }
 
 .meta {
